# IOT

ClientMult/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mult-client
ClientMult/src/: dimmer.c  dimmer.h  light_control.c  light_control.h  main.c  on_off_switch.c  on_off_switch.h  presence_captor.c  presence_captor.h
Dimmer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dimmer-client
Dimmer/src/: dimmer.h  main.c
Light_control/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  light_control-client
Light_control/src/: light_control.c  light_control.h  main.c
On_off_switch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  on_off_switch-client
On_off_switch/src/: main.c  on_off_switch.c  on_off_switch.h
Presence_captor/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  presence_captor-client
Presence_captor/src/: main.c  presence_captor.h
created_objects_src_code/: commandes.txt  dimmer.c  light_control.c  on_off_switch.c  presence_captor.c
